--- a/nambie/templates/base.html
+++ b/nambie/templates/base.html
@@ -34,6 +34,14 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     {% bootstrap_javascript jquery='full' %}
+    <script>
+        const checkBoxes = document.querySelectorAll('.date')
+            checkBoxes.forEach( checkBox => {
+                checkBox.addEventListener('click', function(event) {
+                            location.href = "/accounts/login/"
+                    })
+            })
+    </script>
 </body>
 
 </html>
